--- a/projects/p2_image_classifier/Project_Image_Classifier_Project.ipynb
+++ b/projects/p2_image_classifier/Project_Image_Classifier_Project.ipynb
@@ -76,9 +76,9 @@
     }
    ],
    "source": [
-    "%pip -q --no-cache-dir install tensorflow-datasets --user\n",
-    "%pip -q --no-cache-dir install tfds-nightly --user\n",
-    "%pip -q --no-cache-dir install --upgrade tensorflow --user"
+    "%pip  install tensorflow-datasets --user\n",
+    "%pip  install tfds-nightly --user\n",
+    "%pip  install --upgrade tensorflow --user"
    ]
   },
   {
